--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy":"npx gh-pages -d dist"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.2",
@@ -15,6 +16,7 @@
     "vite": "^4.1.0"
   },
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "node-sass": "^8.0.0",
     "sass": "^1.58.0",
     "svelte-preprocess": "^5.0.1"
